# HPGe-Boulby-Shielding

./: .gitignore  CMakeLists.txt  README.md  sim.cc
gammas/: gamma1120kev.txt  gamma1764kev.txt  gamma295kev.txt  gamma296kev.txt  gamma609kev.txt
include/: action.hh  detectorShielding.hh  generator.hh  radioImpurities.hh  sensitiveDetector.hh
macros/: Cu1_spectrum.mac  Cu2_spectrum.mac  Pb1_spectrum.mac  Pb2_spectrum.mac  layerActivities.mac  run.mac  sourceGPS.mac  vis.mac  visualise.mac
root/: Pb1_Th232.root  default.root
src/: action.cc  detectorShielding.cc  generator.cc  radioImpurities.cc  sensitiveDetector.cc
